# bookmark_client

./: .envrc  .gitignore  .zcrash  Cargo.toml  Makefile  README.md  Trunk.toml  index.html  jest.config.ts  justfile  main.css  next.config.mjs  package-lock.json  package.json  palette.link  sandbox.js  tailwind.config.cjs  tailwind.config.ts  tailwind.css  tsconfig.app.json  tsconfig.json  vite.config.ts
app/tauri/: Cargo.toml  tauri.conf.json
app/tauri/bindings/: IpcResponse.ts
app/tauri/capabilities/: default.json
app/tauri/icons/: icon.icns
app/tauri/proxy/: Cargo.toml
app/tauri/src/: api.rs  config.rs  lib.rs  main.rs
app/vault-backend/: Cargo.toml  config.yml
app/vault-backend/src/: shared.rs
backend/: Cargo.toml  Dockerfile  README.Docker.md  build.rs  compose.yaml
backend/app/: Cargo.toml
backend/app/src/: lib.rs
backend/entity/: Cargo.toml
backend/entity/src/: lib.rs
backend/migration/: Cargo.toml
backend/migration/src/: m20220101_000001_create_table.rs
backend/src/: app.rs  config.rs  database_connection.rs  jwt.rs  lib.rs  main.rs  multiplex.rs  routes.rs  state.rs
backend/src/grpc/: authentication.rs  vault.rs  vault_entries.rs
backend/src/grpc_service/: activity_log.rs  authentication.rs  health_check.rs  mod.rs  user_profile.rs  vault.rs  vault_entries.rs
backend/src/handler/: mod.rs  profile.rs  root.rs  user_information.rs
backend/src/handlers/: information.rs  user_information.rs  vault.rs
backend/src/http_service/: mod.rs  routes.rs  server.rs
backend/src/interceptors/: mod.rs
backend/src/proto/: activity_log.rs  authentication.rs  health_check.rs  mod.rs  user_profile.rs  vault.rs  vault_entries.rs
components/: Cargo.toml
components/errors/: Cargo.toml
components/src/: icon.rs  lib.rs  settings.rs
components/src/cards/: bookmark.rs
components/src/editor/: js_hooks.js  mobile_editor.rs  mod.rs
components/src/forms/: api_request.rs  endpoints.rs  form.rs  login.rs  mod.rs  request.rs  response.rs  sign_up.rs  user_profile.rs
components/src/headers/: default_header.rs  mod.rs
components/src/icons/: arrow_left_right_icon.rs  bell_icon.rs  calendar_icon.rs  chevron.rs  home_icon.rs  language_icon.rs  mod.rs  moon_icon.rs  password_settings.rs  plus_icon.rs  search_icon.rs  star_icon.rs  sun_icon.rs  user_icon.rs
components/src/js_bindings/: add.rs  api_request.js  api_request.rs  is_active_route.rs  mod.rs  navigate.rs  window_location.rs
components/src/layout/: view.rs
components/src/layouts/: mod.rs
components/src/loaders/: loader_dots.rs  loader_eyes.rs  mod.rs
components/src/navigation/: bottom_navigation.rs
components/src/notifications/: mod.rs  notification.rs  notification_card.rs
components/src/typography/: heading.rs  mod.rs  small_text.rs
components/src/view/: mod.rs
database/: Cargo.toml
database/entities/: mod.rs  prelude.rs  user_information.rs  vault.rs  vault_entry.rs
database/entity/: Cargo.toml
database/entity/src/: mod.rs  prelude.rs  user_information.rs  vault.rs  vault_entry.rs
database/migration/src/: lib.rs  m20241024_224838_create_vaults_database.rs  m20241024_230139_create_vault_entry_table.rs  m20241025_001045_link_uer_and_vault.rs
database/src/: database.rs  lib.rs  table_names.rs
database/src/entities/: settings.rs  user.rs
device/: Cargo.toml
gateway/: Cargo.toml  Dockerfile  build.rs
gateway/src/: app_state.rs  config.rs  lib.rs  main.rs  routes.rs  server.rs
gateway/src/handlers/: mod.rs  root.rs  user_information.rs  vault.rs
gateway/src/helpers/: jwt.rs
gateway/src/proto/: authentication.rs  mod.rs  vault_entries.rs
gateway/src/routes/: routes.rs
mobile/: App.vue  Cargo.toml
mobile/components/bottomNavigation/: BottomNavigationItem.vue
mobile/components/confirmOtp/: ConfirmOtpScreenForm.vue  ConfirmOtpScreenHeader.vue  OtpSlot.vue
mobile/components/forgottenPassword/: ForgottenPasswordScreenForm.vue  ForgottenPasswordScreenHeader.vue
mobile/components/header/: AppHeader.vue
mobile/components/layouts/: AuthenticationLayout.vue  DashboardLayout.vue  DefaultLayout.vue
mobile/components/login/: LoginScreenForm.vue  LoginScreenHeader.vue
mobile/components/partials/: BottomNavigation.vue  BottomNavigationItem.vue  bottomNavigation.ts
mobile/components/signUp/: SignUpScreenForm.vue  SignUpScreenHeader.vue
mobile/components/walkThrough/: NextScreenButton.vue  PreviousScreenButton.vue
mobile/router/: authenticationRoutes.ts  dashboardRoutes.ts  editorRoute.ts  index.ts  injectLayout.ts  routeNames.ts  walkThroughRoutes.ts
mobile/setNewPassword/: SetNewPasswordScreenForm.vue  SetNewPasswordScreenHeader.vue
mobile/src/: app.rs  lib.rs
mobile/src/layout/: authentication_view_layout.rs  dashboard_layout.rs  default_layout.rs  mod.rs  walkthrough.rs
mobile/src/state/: cached_user.rs
mobile/src/views/: index.rs  mod.rs
mobile/views/: ConfirmOtpScree.vue  ConfirmOtpScreen.vue  ForgottenPasswordScreen.vue  LoginScreen.vue  SignUpScreen.Vue
mobile/views/authentication/: AuthenticaltionLayout.vue  ConfirmOtpScreen.vue  LoginScreen.vue  SetNewPasswordScreen.vue
mobile/views/dashboard/: DashboardLayout.vue  FavoritesScreen.vue  HomeScreen.vue  MobileDashboardLayout.vue  NotificationScreen.vue  ProfileScreen.vue  SettingsScreen.vue
sqlite_wasm/: .gitignore  Cargo.toml  README.md  index.html  sqlite_wasm.js
sqlite_wasm/src/: database.rs  lib.rs
sqlite_wasm_bindgen/: Cargo.toml
sqlite_wasm_bindgen/src/: database.rs  lib.rs
state/: Cargo.toml
state/src/: access_token.rs  cached_user.rs  installation_status.rs  lib.rs
tauri/: .gitignore  Cargo.toml  Info.ios.plist  tauri.conf.json
tauri/bindings/: CommandResponse.ts  LoginData.ts  PasswordResetRequestData.ts
tauri/capabilities/: default.json  mobile.json
tauri/icons/: icon.icns
tauri/resources/: bookmark.backup.db  mobile.vault.db
tauri/src/: api_request.rs  app_state.rs  config.rs  database.rs  ipc_response.rs  lib.rs  main.rs  state.rs
tauri_wasm_bindgen/: Cargo.toml
tauri_wasm_bindgen/src/: command_hooks.rs  ipc_response.rs  lib.rs
(+325 files in other folders)
