[package]
name = "bookmark-ui"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
leptos = { workspace = true, features = ["csr"] }
wasm-bindgen = { workspace = true }
wasm-bindgen-futures = { workspace = true }
js-sys = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde-wasm-bindgen = { workspace = true }
console_error_panic_hook = { workspace = true }
bookmark_desktop_app = { path = "./desktop" }
bookmark_mobile_app = { path = "./mobile" }
tauri_wasm_bindgen = { path = "./tauri_wasm" }
leptos_heroicons.workspace = true
thaw = { workspace = true, features = ["csr"] }

[workspace]
members = [
    "components",
    "desktop",
    "mobile",
    "sqlite_wasm",
    "tauri",
    "tauri_wasm",
]

[workspace.dependencies]
console_error_panic_hook = "0.1.7"
js-sys = "0.3"
leptos = "0.7.0"
serde = "1"
serde-wasm-bindgen = "0.6"
serde_json = "1"
tauri = "2"
tauri-build = "2"
tauri-plugin-shell = "2"
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
leptos_router = { version = "0.7.0" }
thaw = { version = "0.4.0-beta-5", features = ["csr"] }
leptos_reactive = "0.6.15"
leptos_heroicons = { git = "https://github.com/opeolluwa/leptos_heroicons.git", features = [
    "24-solid",
    "24-outline",
] }
# sqlite_wasm = { path = "sqlite_wasm" }
