[package]
name = "bookmark-ui"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
leptos = { workspace = true, features = ["csr"] }
wasm-bindgen = { workspace = true }
wasm-bindgen-futures = { workspace = true }
js-sys = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde-wasm-bindgen = { workspace = true }
console_error_panic_hook = { workspace = true }
bookmark_desktop_app = { path = "./desktop" }
bookmark_mobile_app = { path = "./mobile" }
tauri_wasm_bindgen = { path = "./tauri_wasm_bindgen" }
leptos_heroicons.workspace = true
thaw = { workspace = true, features = ["csr"] }
tauri.workspace = true
fs = { workspace = true }

[workspace]
members = [
    ".",
    "tauri",
    "mobile",
    "desktop",
    "data_sync",
    "components",
    "tauri_wasm_bindgen",
    "database",
]

[workspace.dependencies]
console_error_panic_hook = "0.1.7"
js-sys = "0.3"
leptos = "0.7.0"
serde = "1"
serde-wasm-bindgen = "0.6"
serde_json = "1"
tauri = "2"
tauri-build = "2"
tauri-plugin-shell = "2"
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
leptos_router = { version = "0.7.0" }
thaw = { version = "0.4.0-beta-5", features = ["csr"] }
leptos_reactive = "0.6.15"
leptos_heroicons = { git = "https://github.com/opeolluwa/leptos_heroicons.git", features = [
    "24-solid",
    "24-outline",

] }
bookmark_grpc_codegen = { git = "https://github.com/opeolluwa/bookmark_grpc_codegen", tag = "v1.0.6", version = "1.0.0" }
bookmark_local_database = { path = "database" }
rusqlite = { version = "0.32.1", features = ["bundled"] }
dirs = "5.0.1"
ehttp = "0.5.0"
include_dir = "0.7.4"
itertools = "0.13.0"
lazy_static = "1.5.0"
markdown = "0.3.0"
native_db = "0.8.0"
native_model = "0.4.20"
once_cell = "1.20.2"
rayon = "1.10.0"
sea-orm = "1.1.0"
strum = "0.26.3"
tauri-plugin-os = "2"
uuid = "1.11.0"
fs = "0.0.5"

[profile.wasm-release]
inherits = "release"
opt-level = 'z'
lto = true
codegen-units = 1


[package.metadata.leptos]
lib-profile-release = "wasm-release"
