[package]
name = "bookmark-ui"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
bookmark_desktop_app = { path = "./desktop" }
bookmark_mobile_app = { path = "./mobile" }
chrono = "0.4.39"
console_error_panic_hook = { workspace = true }
js-sys = { workspace = true }
leptos = { workspace = true, features = ["csr"] }
leptos_heroicons = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde-wasm-bindgen = { workspace = true }
tauri_wasm_bindgen = { path = "./tauri_wasm_bindgen" }
thaw = { workspace = true, features = ["csr"] }
wasm-bindgen = { workspace = true }
wasm-bindgen-futures = { workspace = true }

[workspace]
members = [
    ".",
    "components",
    "data_sync",
    "database",
    "desktop",
    "mobile",
    "sandbox",
    "tauri",
    "tauri_wasm_bindgen",
]

[workspace.dependencies]
console_error_panic_hook = "0.1.7"
js-sys = "0.3"
leptos = "0.7.0"
serde = "1"
serde-wasm-bindgen = "0.6"
serde_json = "1"
tauri = "2"
tauri-build = "2"
tauri-plugin-shell = "2"
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
leptos_router = { version = "0.7.0" }
thaw = { version = "0.4.0-beta-5", features = ["csr"] }
leptos_reactive = "0.6.15"
leptos_heroicons = { git = "https://github.com/opeolluwa/leptos_heroicons.git", features = [
    "24-solid",
    "24-outline",
    "20-solid",
    "16-solid",
] }

bookmark_local_database = { path = "database" }
rusqlite = { version = "0.32.1", features = ["bundled"] }
ehttp = "0.5.0"
itertools = "0.13.0"
lazy_static = "1.5.0"
markdown = "0.3.0"
once_cell = "1.20.2"
strum = "0.26.3"
tauri-plugin-os = "2"
uuid = "1.11.0"
tauri-plugin-fs = "2"
leptos-use = "0.15.1"
codee = "0.2.0"

[profile.wasm-release]
inherits = "release"
opt-level = 'z'
lto = true
codegen-units = 1

[package.metadata.leptos]
lib-profile-release = "wasm-release"
