[package]
name = "vailt_backend"
version = "0.1.0"
license = "unlicensed"
edition = "2021"

[lib]
name = "pkg"
path = "./src/lib.rs"

[dependencies]
anyhow = "1.0.89"
axum = "0.7.5"
axum-extra = { version = "0.9.3", features = ["typed-header"] }
bcrypt = "0.15.1"
entity = { path = "../database/entity" }
jsonwebtoken = "9.3.0"
lazy_static = "1.5.0"
log = "0.4.22"
migration = { path = "../database/migration" }
sea-orm = { version = "1.0.0-rc.5", features = [
    "sqlx-postgres",
    "runtime-tokio-rustls",
    "macros",
] }
serde = { version = "1.0.210", features = ["derive"] }
serde_json = "1.0.128"
serde_yml = "0.0.12"
tokio = { version = "1.40.0", features = ["full"] }
tower-http = { version = "0.6.1", features = ["trace"] }
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
uuid = { version = "1.10.0", features = ["v4"] }
