[package]
name = "bookmark_local_database"
version = "0.0.0"
edition = "2021"
publish = false


[dependencies]
serde-wasm-bindgen = { workspace = true }
wasm-bindgen = { workspace = true }
wasm-bindgen-futures = { workspace = true }
serde = { workspace = true, features = ["derive"] }
rusqlite = { workspace = true, features = ["bundled"] }
include_dir = { workspace = true }
lazy_static = { workspace = true }
rayon = { workspace = true }
uuid = { workspace = true, features = ["v4"] }
dirs = { workspace = true }
sea-orm = { workspace = true, features = ["sqlx-sqlite", "runtime-tokio-rustls", "macros"] }
