[package]
name = "bookmark_mobile_app"
version = "0.1.0"
edition = "2021"

[dependencies]
console_error_panic_hook = { workspace = true }
js-sys = { workspace = true }
leptos = { workspace = true, features = ["csr"] }
leptos_reactive = { workspace = true }
leptos_router = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde-wasm-bindgen = { workspace = true }
tauri_wasm_bindgen = { path = "../tauri_wasm", version = "*" }
thaw = { workspace = true, features = ["csr"] }
wasm-bindgen = { workspace = true }
wasm-bindgen-futures = { workspace = true }
bookmark_components = { path = "../components" }
