[package]
name = "sqlite_wasm"
version = "0.1.0"
edition = "2021"

[dependencies]
wasm-bindgen = { workspace = true }
serde = { workspace = true, features = ["derive"] }
native_db = "0.8.0"
native_model = "0.4.20"
once_cell = "1.20.2"
itertools = "0.13.0"
# rusqlite = { version = "0.32.1", features = ["bundled", "wasm32-wasi-vfs"] }
