[package]
name = "bookmark"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "bookmark_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { workspace = true, features = [] }

[dependencies]
bookmark_components = { path = "../components" }
bookmark_grpc_codegen = { workspace = true }
ehttp = { version = "0.5.0", features = ["json", "native-async"] }
itertools = "0.13.0"
native_db = "0.8.0"
native_model = "0.4.20"
once_cell = "1.20.2"
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
sqlite_wasm_bindgen = { workspace = true }
tauri = { workspace = true, features = [] }
tauri-plugin-os = "2"
tauri-plugin-shell = { workspace = true }
tauri_wasm_bindgen = { path = "../tauri_wasm_bindgen", version = "*" }
