[package]
name = "bookmark"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "bookmark_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { workspace = true, features = [] }

[dependencies]
bookmark_components = { path = "../components" }
bookmark_grpc_codegen = { workspace = true }
ehttp = { workspace = true, features = ["json", "native-async"] }
itertools = { workspace = true }
native_db = { workspace = true }
native_model = { workspace = true }
once_cell = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
bookmark_local_database = { workspace = true }
tauri = { workspace = true, features = [] }
tauri-plugin-os = { workspace = true }
tauri-plugin-shell = { workspace = true }
tauri_wasm_bindgen = { path = "../tauri_wasm_bindgen", version = "*" }
tauri-plugin-fs = "2"
