[package]
name = "bookmark"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "bookmark_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[dependencies]
codee = "0.2.0"
ehttp = "0.5.0"
itertools = "0.13.0"
lazy_static = "1.5.0"
log = "0.4.25"
markdown = "0.3.0"
once_cell = "1.20.2"
rusqlite = { version = "0.32.1", features = ["bundled"] }
serde = "1"
serde_json = "1"
strum = "0.26.3"
tauri = { version = "2", features = [] }
tauri-plugin-fs = "2"
tauri-plugin-os = "2"
tauri-plugin-shell = "2"
tauri-plugin-sql = { version = "2", features = ["sqlite"] }
thiserror = "2.0.11"
uuid = "1.11.0"


[build-dependencies]
tauri-build = { version = "2", features = [] }
