[package]
name = "app"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.7.5"
chrono = "0.4.38"
nanoid = "0.4.0"
serde = { version = "1.0.204", features = ["derive"] }

uuid = "1.10.0"
sea-orm = { version = "1.0.0-rc.5", features = [
    "sqlx-postgres",
    "runtime-tokio-rustls",
    "macros",
    "debug-print",
] }
tokio = { version = "1.39.2", features = ["full"] }
anyhow = "1.0.86"
tracing-subscriber = "0.3.18"
tracing = "0.1.40"
migration = { path = "../migration" }
entity = { path = "../entity" }